completed the crud operation for the retaurant module

--- a/templates/deleteMenuItem.html
+++ b/templates/deleteMenuItem.html
@@ -1,9 +1,9 @@
 <html>
 
 <body>
-<h1> Are you sure you want to delete {{item.name}}? </h1>
+<h1> Are you sure you want to delete {{item.name}} </h1>
 
-<form action="{{ url_for('deleteMenuItem', restaurant_id=item.restaurant_id, menu_item_id=item.id)}}" method = 'POST'>
+<form action="{{ url_for('deleteMenuItem', restaurant_id=restaurant.id, menu_id=item.id)}}" method = 'POST'>
 
 <input type='submit', value = 'Delete'>
 
@@ -12,7 +12,7 @@
 
 </form>
 
-<a href = "{{ url_for('restaurantMenu', id = item.restaurant_id)}}"> Cancel </a>
+<a href = "{{ url_for('restaurantMenu', restaurant_id = restaurant.id)}}"> Cancel </a>
 </body>
 
 </html>
