--- a/templates/editMenuItem.html
+++ b/templates/editMenuItem.html
@@ -1,12 +1,12 @@
 <html>
     <body>
-        <form action={{ url_for('editMenuItem', restaurant_id = restaurant.id, menu_item_id = menu_item.id) }} method = 'POST'>
+        <form action={{ url_for('editMenuItem', restaurant_id = restaurant.id, menu_id = item.id) }} method = 'POST'>
                 <p>Name:</p>
 
-                <input type='text' placeholder="{{menu_item.name}}" size='30' name='name'>
+                <input type='text' placeholder="{{item.name}}" size='30' name='name'>
                 
                 <input type='submit' value='Update'>
         </form>
-        <a href={{ url_for('restaurantMenu', id = restaurant.id) }}> Cancel </a>
+        <a href={{ url_for('restaurantMenu', restaurant_id = restaurant.id) }}> Cancel </a>
     </body>
 </html>
