--- a/templates/menu.html
+++ b/templates/menu.html
@@ -7,7 +7,7 @@
         <div class = 'header'>
             <h1>{{restaurant.name}}</h1>
         </div>
-        <a href="{{ url_for('newMenuItem', restaurant_id = restaurant.id) }}" > Create new Item</a>
+        <a href="{{ url_for('addMenuItem', restaurant_id = restaurant.id) }}" > Create new Item</a>
         <div class="flash"> 
             {% with messages = get_flashed_messages() %}
                 {% if messages %}
@@ -35,8 +35,8 @@
         </div>
 
         <div class = "editdeletepane">
-            <a href={{ url_for('editMenuItem', restaurant_id = restaurant.id, menu_item_id = i.id ) }}> Edit </a> 
-            <a href={{ url_for('deleteMenuItem', restaurant_id = restaurant.id, menu_item_id = i.id ) }}> Delete </a>
+            <a href={{ url_for('editMenuItem', restaurant_id = restaurant.id, menu_id = i.id ) }}> Edit </a> 
+            <a href={{ url_for('deleteMenuItem', restaurant_id = restaurant.id, menu_id = i.id ) }}> Delete </a>
         </div>
         {% endfor %}
     </div>
