--- a/templates/editMenuItem.html
+++ b/templates/editMenuItem.html
@@ -2,8 +2,11 @@
     <body>
         <form action={{ url_for('editMenuItem', restaurant_id = restaurant.id, menu_id = item.id) }} method = 'POST'>
                 <p>Name:</p>
-
-                <input type='text' placeholder="{{item.name}}" size='30' name='name'>
+                <input type='text' size='30' name='menu_name'>
+                <p>description</p>
+                <input type="text" size='60' name='description'>
+                <p>price</p>
+                <input type="number" size='30' namr='price'>
                 
                 <input type='submit' value='Update'>
         </form>
