--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -4,19 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
     <title>Document</title>
 </head>
 <body>
-    <a href="{{ url_for('newRestaurant') }}"> Create new restaurant </a>
-    {% if restaurants|length > 0 %}
-    <ul>
-        {% for restaurant in restaurants %}
-            <li> {{ restaurant.name }}</li>
-            <a href="{{ url_for('restaurantMenu', restaurant_id = restaurant.id) }}"> Menu </a>
-            <a href="{{ url_for('editRestaurant', restaurant_id = restaurant.id) }}"> Edit </a>
-            <a href="{{ url_for('deleteRestaurant', restaurant_id = restaurant.id) }}"> Delete </a>
-        {% endfor %}
-    </ul>
-    {% endif %}
+    <div class="pane">
+        <div class="header">
+            <h1>Restaurants near me</h1>
+        </div>
+        <div class="flash"> 
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                        <ul>
+                            {% for message in messages %}
+                                <li> {{ message }} </li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+                {% endwith %}
+            </div>
+        <a href="{{ url_for('newRestaurant') }}"> Create new restaurant </a>
+        {% if restaurants|length > 0 %}
+            {% for restaurant in restaurants %}
+                <p> {{ restaurant.name }} </p>
+                <a href="{{ url_for('restaurantMenu', restaurant_id = restaurant.id) }}"> Menu </a>
+                <a href="{{ url_for('editRestaurant', restaurant_id = restaurant.id) }}"> Edit </a>
+                <a href="{{ url_for('deleteRestaurant', restaurant_id = restaurant.id) }}"> Delete </a>
+            {% endfor %}
+        {% endif %}
+    </div>
 </body>
 </html>
