--- a/templates/deleteMenuItem.html
+++ b/templates/deleteMenuItem.html
@@ -1,18 +1,17 @@
-<html>
+{% extends "main.html" %}
+{% block content %}
+{% include "header.html" %}
+<h2> Are you sure you want to delete {{item.name}}? </h2>
 
-<body>
-<h1> Are you sure you want to delete {{item.name}} </h1>
+<form action="{{ url_for('deleteMenuItem', restaurant_id=restaurant.id, menu_id=item.id)}}" method = 'post'>
 
-<form action="{{ url_for('deleteMenuItem', restaurant_id=restaurant.id, menu_id=item.id)}}" method = 'POST'>
-
-<input type='submit', value = 'Delete'>
-
-
-
-
+	<button type="submit" class="btn btn-default delete" id="submit" type="submit">
+	<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete</button>
 </form>
 
-<a href = "{{ url_for('restaurantMenu', restaurant_id = restaurant.id)}}"> Cancel </a>
-</body>
+<a href = '{{url_for("restaurantsList")}}'>
+		<button class="btn btn-default delete">
+		<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
+	</a>
 
-</html>
+{% endblock %}
