--- a/templates/deleteRestaurant.html
+++ b/templates/deleteRestaurant.html
@@ -1,15 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <h2>Do you want to delete the Restaurant, {{ restaurant.name }}</h2>
-    <form action="#" method="POST">
-        <input type="submit" value="Delete">
-    </form>
-</body>
-</html>
+{% extends "main.html" %}
+{% block content %}
+{% include "header.html" %}
+<h2> Are you sure you want to delete {{restaurant.name}}? </h2>
+
+<form action="{{url_for('deleteRestaurant', restaurant_id = restaurant.id)}}" method = 'post'>
+
+	<button type="submit" class="btn btn-default delete" id="submit" type="submit">
+	<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete</button>
+	<a href = "{{url_for('restaurantsList')}}">
+		<button class="btn btn-default delete">
+		<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
+	</a>
+
+</form>
+
+{% endblock %}
