--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html>
 <head>
 
   <!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
@@ -37,8 +35,10 @@
 <script>
 function signInCallback(authResult) {
   if (authResult['code']) {
+
     // Hide the sign-in button now that the user is authorized
     $('#signinButton').attr('style', 'display: none');
+
     // Send the one-time-use code to the server, if the server responds, write a 'login successful' message to the web page and then redirect back to the main restaurants page
     $.ajax({
       type: 'POST',
@@ -49,19 +49,21 @@ function signInCallback(authResult) {
       success: function(result) {
         // Handle or verify the server response if necessary.
         if (result) {
-          $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
-         setTimeout(function() {
-          window.location.href = "/restaurants";
-         }, 4000);
-      } 
+          $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...');
+          setTimeout(function() {
+            window.location.href = "/restaurants";
+          }, 4000);
+        } else if (authResult['error']) {
+          console.log('There was an error: ' + authResult['error']);
+        } else {
+          $('#result').html('Failed to make a server-side call. Check your configuration and console.');
+        }
+      },
+      error: function(result) {
+        console.log('There was an error: ' + result);
       }
-  }); 
-  } else if (authResult['error']) {
-    console.log('There was an error: ' + authResult['error']);
-  } else {
-        $('#result').html('Failed to make a server-side call. Check your configuration and console.');
-  }
-  }
+      
+  }); } }
 </script>
 
 
